* ElectronicEmail order by date DESC
* Rename Model name. Replace _ to . (dot)
* Add get_rec_name in ElectronicMail
* Review INSTALL documentation
* Test legal notice
* Add es_ES locale
* Review ca_ES locale
* Add ca_ES locale
* get_email: Remove base64 when reading data
* Add doc
* README and legal notice
* Initial release