@@ -107,6 +107,7 @@ class ElectronicMail(ModelSQL, ModelView):
     flag_flagged = fields.Boolean('Flagged')
     flag_draft = fields.Boolean('Draft')
     flag_recent = fields.Boolean('Recent')
+    template = fields.Boolean('Template')
     size = fields.Integer('Size')
     mailbox_owner = fields.Function(
         fields.Many2One('res.user', 'Owner'),
@@ -135,6 +136,9 @@ class ElectronicMail(ModelSQL, ModelView):
         return False
 
     def default_flag_recent(self):
+        return False
+
+    def default_template(self):
         return False
 
     def get_rec_name(self, ids, name):
